# superstar-cli

./: README.md  pyproject.toml
superstar-cli/: animation.py
superstar_cli/: __main__.py  animation.py
superstar_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
