# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superstar-cli"
version = "1.0.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A terminal-based animation of the Superstar Rajinikanth title card."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "playsound==1.2.2",
]

[project.scripts]
# This line creates the 'superstar' command
superstar = "superstar_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"superstar_cli.assets" = ["*.mp3"]