# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superstar-cli"
version = "1.0.1"
authors = [
  { name="Harishri B R", email="harishribr4@example.com" },
]
description = "A terminal-based animation of the Superstar Rajinikanth title card."
readme = "README.md"
license = "MIT" # Modern way to specify license
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "playsound==1.2.2",
]

[project.scripts]
superstar = "superstar_cli.animation:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"superstar_cli.assets" = ["*.mp3"]